op権限で、ストレージのバックアップを実装